Production-Org-Metadata/force-app/main/default/objects/Payroll__c/Payroll__c.object-meta.xml
<CustomObject>
    <label>Payroll</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payroll Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>