Production-Org-Metadata/force-app/main/default/objects/Payroll__c/fields/Adjustment_Description__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Description__c</fullName>
    <label>Adjustment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>