Production-Org-Metadata/force-app/main/default/objects/Payroll__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Payroll</relationshipLabel>
    <relationshipName>Payroll</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>