Production-Org-Metadata/force-app/main/default/objects/Payroll__c/fields/Net_Salary__c.field-meta.xml
<CustomField>
    <fullName>Net_Salary__c</fullName>
    <label>Net Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>