Production-Org-Metadata/force-app/main/default/objects/Payroll__c/fields/Payroll_Month__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Month__c</fullName>
    <label>Payroll Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>