Production-Org-Metadata/force-app/main/default/objects/Payroll__c/fields/Payroll_Summary__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Summary__c</fullName>
    <label>Payroll Summary</label>
    <referenceTo>Payroll_Summary__c</referenceTo>
    <relationshipLabel>Payroll</relationshipLabel>
    <relationshipName>Payroll</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>