Production-Org-Metadata/force-app/main/default/objects/Payroll__c/fields/Total_Additions__c.field-meta.xml
<CustomField>
    <fullName>Total_Additions__c</fullName>
    <label>Total Additions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>