Production-Org-Metadata/force-app/main/default/objects/Payroll__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Net_Salary__c</columns>
    <columns>Payroll_Month__c</columns>
    <columns>Payroll_Summary__c</columns>
    <columns>Payroll_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>